<resources>
    <string name="app_name">EposDemo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Wirecard ePOS SDK</string>
    <string name="nav_header_subtitle">mpos-svk@wirecard.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="payment">Payment</string>
    <string name="sales">Sales</string>
    <string name="sale_detail">Sale detail</string>
    <string name="modify_sale">Modify sale</string>
    <string name="shifts">Shifts</string>
    <string name="products">Products</string>
    <string name="settings">Settings</string>
    <string name="not_found">Not found</string>
    <string name="cash">Cash</string>
    <string name="next">Next</string>
    <string name="card">Card</string>
    <string name="terminal_authorization">Terminal authorization</string>
    <string name="receipt">Receipt</string>
    <string name="refund">Refund</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="pay_in">Pay in</string>
    <string name="pay_out">Pay out</string>
    <string name="sale_ok">Sale was successful\n\nCreating receipt…</string>
    <string name="none">--</string>
    <string name="terminal">Terminal</string>
    <string name="printer">Printer</string>
    <string name="cash_register">Cash Register</string>
    <string name="settings_note">Click for select, long click for remove</string>
    <string name="cash_register_error">You have to select cash register in settings</string>
    <string name="cancel">Cancel</string>
    <string name="make_unconfirmed_sale">Make unconfirmed (open) sale</string>
    <string name="reference_purchase">Reference purchase</string>
    <string name="unsupported_payment_combination">Unsupported payment method and type combination</string>
    <string name="payment_actions">Payment actions:</string>
</resources>
