<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/detailTitle"
        style="@style/DetailTitle"
        android:text="@string/shifts"
        />

    <Space
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/detailTitle"
        />

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:indeterminate="true"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/space"
        tools:visibility="visible"
        />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <Button
            android:id="@+id/open_close"
            style="@style/ActionButton"
            android:layout_weight="2"
            android:text="@string/open"
            />

        <Button
            android:id="@+id/pay_in"
            style="@style/ActionButton"
            android:text="@string/pay_in"
            />

        <Button
            android:id="@+id/pay_out"
            style="@style/ActionButton"
            android:text="@string/pay_out"
            />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailTitle"
        tools:listitem="@layout/simple_list_item"
        tools:visibility="visible"
        />

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#F00"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Error"
        />

</androidx.constraintlayout.widget.ConstraintLayout>