<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/detailTitle"
        style="@style/DetailTitle"
        android:text="@string/settings"
        />

    <Space
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/detailTitle"
        />

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/space"
        tools:visibility="gone"
        />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailTitle"
        >

        <LinearLayout
            android:id="@+id/terminal_selection"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terminal"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/terminal_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/none"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/printer_selection"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/printer"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/printer_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/none"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cash_register_selection"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash_register"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/cash_register_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/none"
                />

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
