<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/detailTitle"
        style="@style/DetailTitle"
        android:text="@string/payment"
        />

    <Space
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/detailTitle"
        />

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/space"
        tools:visibility="visible"
        />

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#F00"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Error"
        tools:visibility="visible"
        />

    <TextView
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Update"
        tools:visibility="visible"
        />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <Button
            android:id="@+id/cash"
            style="@style/ActionButton"
            android:text="@string/cash"
            />

        <Button
            android:id="@+id/card"
            style="@style/ActionButton"
            android:text="@string/card"
            />
    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        />

    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:textSize="32sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailTitle"
        tools:text="0,0 €"
        />

    <TableLayout
        android:id="@+id/tableLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal|center"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        app:layout_constraintBottom_toTopOf="@+id/buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="350dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount"
        app:layout_constraintWidth_max="350dp"
        tools:ignore="HardcodedText"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            >

            <Button
                android:id="@+id/calculator_1"
                style="@style/CalculatorButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="1"
                />

            <Button
                android:id="@+id/calculator_2"
                style="@style/CalculatorButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="2"
                />

            <Button
                android:id="@+id/calculator_3"
                style="@style/CalculatorButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="3"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            >

            <Button
                android:id="@+id/calculator_4"
                style="@style/CalculatorButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="4"
                />

            <Button
                android:id="@+id/calculator_5"
                style="@style/CalculatorButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="5"
                />

            <Button
                android:id="@+id/calculator_6"
                style="@style/CalculatorButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="6"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            >

            <Button
                android:id="@+id/calculator_7"
                style="@style/CalculatorButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="7"
                />

            <Button
                android:id="@+id/calculator_8"
                style="@style/CalculatorButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="8"
                />

            <Button
                android:id="@+id/calculator_9"
                style="@style/CalculatorButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="9"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            >

            <Button
                android:id="@+id/calculator_00"
                style="@style/CalculatorButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="00"
                />

            <Button
                android:id="@+id/calculator_0"
                style="@style/CalculatorButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="0"
                />

            <Button
                android:id="@+id/calculator_c"
                style="@style/CalculatorButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="c"
                />

        </TableRow>

    </TableLayout>

    <CheckBox
        android:id="@+id/openSaleCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/make_unconfirmed_sale"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout3"
        />


</android.support.constraint.ConstraintLayout>